# rlx-eda

./: .gitignore  CITATIONS.md  Cargo.toml  DOCKER.md  Justfile  PLAN.md  README.md  SIMULATIONS.md
crates/eda-bench-tinyconv/: Cargo.toml  PLAN.md  README.md  bench.example.toml
crates/eda-bench-tinyconv/docker/: digest.txt  pin.sh  verilator-digest.txt
crates/eda-bench-tinyconv/src/: bisect.rs  bundle.rs  config.rs  inference.rs  lib.rs  manifest.rs  optimization.rs  pnr.rs  report.rs
crates/eda-bench-tinyconv/src/backends/: fpga.rs  inhouse.rs  mod.rs  orfs.rs  rtl_sim.rs  yosys_sky130.rs
crates/eda-bench-tinyconv/tests/: accuracy_gate.rs  baked_per_channel_synth.rs  bundle.rs  config.rs  end_to_end_report.rs  fpga_backend.rs  inference.rs  inhouse_backend.rs  inner_loop.rs  manifest.rs  orfs_json.rs  outer_loop.rs  pnr.rs  pnr_baked_dense.rs  real_foundry.rs  report_file.rs  rtl_sim_real.rs  unrolled_rtl_sim.rs  yield_bisect_report.rs
crates/eda-config/: Cargo.toml
crates/eda-config/src/: lib.rs
crates/eda-config/tests/: inheritance.rs
crates/eda-container/: Cargo.toml
crates/eda-container/src/: lib.rs
crates/eda-drc/: Cargo.toml
crates/eda-drc/src/: lib.rs
crates/eda-drc/tests/: known_bad_layout.rs
crates/eda-em/: Cargo.toml
crates/eda-em/src/: lib.rs
crates/eda-extern-ltspice/: Cargo.toml
crates/eda-extern-ltspice/src/: lib.rs
crates/eda-extern-ngspice/: Cargo.toml
crates/eda-extern-ngspice/src/: lib.rs
crates/eda-extract/: Cargo.toml
crates/eda-extract/src/: lib.rs
crates/eda-extract/tests/: em_bridge.rs
crates/eda-floorplan/: Cargo.toml
crates/eda-floorplan/src/: main.rs  svg_import.rs
crates/eda-mna/: Cargo.toml
crates/eda-mna/examples/: ac_sweep_mlx.rs  ngspice_cross_bench.rs  ngspice_mirror_mc.rs  ngspice_rc_transient_mc.rs  scan_rc_per_draw_r_mc.rs  scan_rc_transient.rs
crates/eda-mna/src/: ac.rs  lib.rs  linear_scan.rs
crates/eda-mna/tests/: batched_be_step.rs  batched_mosfet_mc.rs  batched_mosfet_mirror_mc.rs  batched_residual.rs  batched_solve_dc.rs  batched_solve_dc_diode.rs  batched_transient.rs  batched_transient_delay.rs  delay_witness.rs  inverter.rs  mosfet_circuit.rs  mosfet_transient.rs  newton_solve.rs  optimize.rs  r_plus_d_circuit.rs  sensitivity.rs  transient.rs  transient_sens.rs  voltage_source.rs
crates/eda-pdks/: Cargo.toml  build.rs
crates/eda-pdks/src/: lib.rs
crates/eda-pdks/tests/: drc_smoke.rs  photonic_use.rs
crates/eda-pex/: Cargo.toml
crates/eda-pex/src/: lib.rs
crates/eda-pinn/: Cargo.toml
crates/eda-pinn/src/: kcl_residual.rs  lib.rs  mosfet_surrogate.rs
crates/eda-pnr/: Cargo.toml
crates/eda-pnr/docs/: gpu_scaling.md  hpwl_optim_trace.csv  hpwl_optim_trace.md
crates/eda-pnr/src/: ad.rs  connectivity.rs  flow.rs  lib.rs  netlist.rs  place.rs  route.rs
crates/eda-pnr/tests/: ad_batched.rs  ad_combined.rs  ad_diff_pair.rs  ad_hpwl.rs  ad_parallel.rs  steiner.rs  two_resistor.rs
crates/eda-sim-harness/: Cargo.toml
crates/eda-sim-harness/src/: cache.rs  corner.rs  harness.rs  lib.rs  measure.rs  report.rs  spec.rs  testbench.rs  verify.rs
crates/eda-sim-harness/tests/: rc_smoke.rs
crates/eda-stdcells/: Cargo.toml  README.md
crates/eda-stdcells/src/: cell.rs  lib.rs  liberty.rs  library.rs  mock.rs
crates/eda-stdcells/tests/: area_sum.rs  liberty.rs  load.rs  mock.rs  stdcell_layout.rs
crates/eda-tile/: Cargo.toml  README.md
crates/eda-tile/src/: grid.rs  lib.rs  pdn.rs  tile.rs
crates/eda-tile/tests/: pdn.rs
crates/eda-trace/: Cargo.toml
crates/eda-trace/docs/: run-summary.md
crates/eda-trace/src/: charts.rs  lib.rs  optim.rs  report.rs  trace.rs
crates/eda-viz/: CHANGELOG.md  Cargo.toml  README.md
crates/eda-viz/assets/: LatinModernMath-LICENSE.txt
crates/eda-viz/examples/: dashboard.rs  demo.rs  full_demo.rs
crates/eda-viz/src/: layout.rs  lib.rs  palette.rs  png.rs  schematic.rs  svg.rs  waveform.rs
crates/eda-viz/tests/: gds_roundtrip.rs  golden_snapshots.rs  smoke.rs
crates/eda-waveform/: Cargo.toml  README.md
crates/eda-waveform/examples/: render_gallery.rs
crates/eda-waveform/src/: ac.rs  align.rs  assertions.rs  csv.rs  diff.rs  golden.rs  lib.rs  linearity.rs  mc.rs  nutmeg.rs  plot.rs  power.rs  spectrum.rs  stats.rs  timing.rs  vcd.rs
crates/eda-waveform/tests/: mc_corner_sweep.rs  vcd_realistic.rs
crates/rlx-eda-cli/: Cargo.toml
crates/rlx-eda-cli/src/: dashboard.rs  doctor.rs  lib.rs  main.rs
crates/rlx-eda-cli/tests/: pdk_registry_roundtrip.rs
crates/spike-ac/: Cargo.toml
crates/spike-ac/src/: diode_rc.rs  lib.rs  main.rs
crates/spike-ac/tests/: analytic.rs  diode_rc_analytic.rs  diode_rc_fd.rs  diode_rc_ngspice.rs  finite_difference.rs  ngspice.rs
crates/spike-clock-decoder/: Cargo.toml
crates/spike-clock-decoder/src/: lib.rs
crates/spike-clock-decoder/tests/: strobes.rs
crates/spike-clocks/: Cargo.toml
crates/spike-clocks/src/: lib.rs
crates/spike-clocks/tests/: clock_tree.rs
crates/spike-cmos-gates/: Cargo.toml
crates/spike-cmos-gates/src/: lib.rs  mna.rs  schematic.rs
crates/spike-cmos-gates/tests/: dffsr.rs  propagation_delay.rs  sequential.rs  thermal_sweep.rs  truth_tables.rs
crates/spike-comparator/: Cargo.toml
crates/spike-comparator-cmos/: Cargo.toml
crates/spike-comparator-cmos/src/: lib.rs
crates/spike-comparator-cmos/tests/: vtc_and_transient.rs
crates/spike-comparator/src/: lib.rs  main.rs
crates/spike-comparator/tests/: analytic.rs  finite_difference.rs  ngspice.rs
crates/spike-dac-r2r/: Cargo.toml
crates/spike-dac-r2r/src/: lib.rs  mna.rs
crates/spike-dac-r2r/tests/: staircase.rs
crates/spike-dado-r2r/: Cargo.toml  README.md
crates/spike-dado-r2r/docs/: 00_final_ngspice_dado.txt  00_final_ngspice_eda.txt  INDEX.md  STORY.md  iter_00_eda_layout.gds  iter_09_dado_layout.gds  iter_09_eda_layout.gds  iter_24_dado_layout.gds  iter_49_dado_layout.gds
crates/spike-dado-r2r/examples/: sweep.rs
crates/spike-dado-r2r/src/: charts.rs  layout.rs  lib.rs  main.rs  schem.rs  sim.rs
crates/spike-dado-r2r/tests/: dado.rs  evaluator.rs  thermal.rs
scripts/: dado
(+369 files in other folders)
