[package]
name         = "eda-sim-harness"
version      = "0.0.1"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_yaml         = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
plotters           = { workspace = true }
tempfile           = { workspace = true }
printpdf           = { workspace = true }
image              = { version = "0.24", default-features = false, features = ["png"] }
eda-spice-emit     = { workspace = true }
eda-extern-ngspice = { workspace = true }
eda-waveform       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
