[package]
name         = "eda-waveform"
version      = "0.0.1"
readme       = "README.md"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
thiserror    = { workspace = true }
plotters     = { workspace = true }
eda-validate = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
