[package]
name         = "spike-ac"
version      = "0.0.1"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[features]
ngspice = ["dep:eda-extern-ngspice"]

[dependencies]
rlx-ir             = { workspace = true }
rlx-opt            = { workspace = true }
rlx-runtime        = { workspace = true }
eda-validate       = { workspace = true }
eda-spice-emit     = { workspace = true }
eda-extern-ngspice = { workspace = true, optional = true }

[[bin]]
name = "spike-ac"
path = "src/main.rs"
