[package]
name         = "spike-clock-decoder"
version      = "0.0.1"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

# Decode logic on top of `spike-ripple-counter`. Generates the SAR
# ADC's per-cycle control strobes (clk_sh, clk_door, clk_reset) by
# matching the counter's binary state against compile-time targets.
# Companion to LTspice paper Fig 12.1 — the ripple counter is the
# divider stage, this crate is the decoder stage.

[features]
ngspice = ["dep:eda-extern-ngspice"]
ltspice = ["dep:eda-extern-ltspice"]

[dependencies]
spike-cmos-gates     = { workspace = true }
spike-ripple-counter = { workspace = true }
eda-spice-emit       = { workspace = true }
eda-validate         = { workspace = true }

[dependencies.eda-extern-ngspice]
workspace = true
optional  = true

[dependencies.eda-extern-ltspice]
workspace = true
optional  = true

[dev-dependencies]
eda-waveform = { workspace = true }
